2장 코드를 롬복으로 전환하기 종료

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,14 @@ idea/*
 build/*
 .idea/*
 .gradle/*
+
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
